# AIEC_v1.0

01_Dense_Vector_Retrieval/: 01_Cat_Health_Vector_RAG_LangChain_Qdrant.ipynb  README.md  pyproject.toml
02_Agentic_RAG_LangGraph_LangChain/: 01_Cat_Health_Agentic_RAG_LangGraph_LangChain.ipynb
03_Agent_Memory_LangGraph_LangChain/: 01_Cat_Health_Agent_Memory_LangGraph_LangChain.ipynb
04_Multi_Agent_Systems/: 01_Cat_Health_Deep_Research_Multi_Agent_LangChain_LangGraph.ipynb
05_Synthetic_Data_Generation_for_RAG_Evals/: 01_Cat_Health_Synthetic_Data_Generation_Ragas_LangSmith.ipynb  knowledge_graph.json
05_Synthetic_Data_Generation_for_RAG_Evals/artifacts/: cat_health_knowledge_graph.json  cat_health_synthetic_testset.jsonl
06_Agentic_RAG_Evaluation/: 01_Metal_Price_Agent_Evaluation_Ragas_LangGraph.ipynb  synthetic_testset.csv
07_Advanced_Retrievers/: 01_Cat_Health_Advanced_Retrieval.ipynb
08_MCP/: README.md  catshop.db
08_MCP/app/: tools.py
09_Agent_Servers/: README.md  langgraph.json  pyproject.toml
09_Agent_Servers/app/: models.py
fifo_agentic_verification/: FUTURE_FEATURES.md  README.md  SETUP_COMMANDS.sh  deliverables.md  fifo_agentic_verification.ipynb  fifo_final.ipynb  project.md  pyproject.toml
fifo_agentic_verification/agent_server/: README.md  langgraph.json  pyproject.toml
fifo_agentic_verification/agent_server/app/: graph.py  s01_imports.py  s02_config.py  s03_contracts.py  s04_tools.py  s05_ingest.py  s06_orch.py  s07_gen.py  s08_run.py  s09_check.py  s10_ragas.py  s11_report.py  s12_graph.py
fifo_agentic_verification/hw/: test_idle.sv  (+1 more)
(+9 files in other folders)
