[project]
name = "fifo-agent-server"
version = "0.1.0"
description = "Agentic ASIC verification pipeline served via LangGraph."
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.0,<2.0.0",
    "langchain-openai>=1.2.0,<2.0.0",
    "langchain-qdrant",
    "langgraph>=1.2.0,<2.0.0",
    "docling",
    "rank-bm25",
    "ragas>=0.4",
    "instructor",
    "pydantic>=2.12.0,<3.0.0",
    "ipython",
    "langgraph-cli[inmem]>=0.4.31",
]

[tool.uv]
package = false
